@@ -13,6 +13,9 @@ Features
 * Added Windows Installation application (see sf #830899)
 * Windows Service support for server.jar (see sf #830890)
 * Applet Window Resizing (see sf #830892)
+* Put in new Ant targets for building Windows Packaging (.exe)
+* Put in new Ant targets for building Tarball packaging (.tar.gz)
+* Added a thick client for testing - still a little buggy
 
 Bug Fixes
 
